# qmidiroute

./: ChangeLog  Makefile.am  Makefile.in  NEWS  README  configure  configure.ac
debian/: changelog  control  copyright  menu  qmidiroute.desktop  qmidiroute_32x32.xpm  rules  watch
debian/patches/: 01-manpage_fix.patch  02-Fix_loading_config_file.patch  series
examples/: Makefile.in
man/: Makefile.in
man/de/: Makefile.in
man/fr/: Makefile.in
src/: Makefile.am  Makefile.in  config.h.in  main.cpp  main.h  mainwindow.cpp  mainwindow.h  mapdata.cpp  mapwidget.cpp  seqdriver.cpp  seqdriver.h
src/pixmaps/: Makefile.in  filenew.xpm  fileopen.xpm  filequit.xpm  filesave.xpm  filesaveas.xpm  mapadd.xpm  mapclone.xpm  mapremove.xpm  maprename.xpm  midi icons-hd.xcf  midi icons.xcf  rename.xcf
src/translations/: qmidiroute_de.ts  qmidiroute_fr.ts  qmidiroute_ru.ts
